--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
-qq.account=104776859
-qq.password=maokai110,,,
+qq.account=123456789
+qq.password=123456789
 mirai.log.path=mirai.log
 
 dailyEnglish.url=http://open.iciba.com/dsapi/
