--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.maoookai</groupId>
     <artifactId>Dami2</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -37,13 +37,13 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.0.0</version> <!-- 替换版本为你需要的版本 -->
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
             <version>2.4</version>
-            <classifier>jdk15</classifier>	<!-- 就是这句 -->
+            <classifier>jdk15</classifier>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -51,6 +51,34 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
+
+    <build>
+        <finalName>Dami2</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>cn.maoookai.DamiMainApp</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
