--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
+            <version>20030203.000550</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
