--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.7.1-dev-1</version>
+            <version>2.7.1</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
