--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <id>jcenter</id>
             <url>https://jcenter.bintray.com/</url>
         </repository>
+        <repository>
+            <id>ktor-eap</id>
+            <name>ktor-eap</name>
+            <url>https://maven.pkg.jetbrains.space/public/p/ktor/eap/</url>
+        </repository>
     </repositories>
 
 
