--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.80</version>
         </dependency>
+        <!-- Redis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
 
     </dependencies>
 
