--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,14 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <kotlin.version>1.4.32</kotlin.version>
+        <slf4j.version>2.0.4</slf4j.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.13.0</version>
+            <version>2.13.0-RC2</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -70,10 +71,18 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.19</version>
+            <version>1.2.83</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
