--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>xyz.cssxsh.mirai</groupId>
+            <artifactId>fix-protocol-version</artifactId>
+            <version>1.3.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/fix-protocol-version-1.3.0.mirai2.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
@@ -118,6 +125,25 @@
                                     <mainClass>cn.maoookai.DamiMainApp</mainClass>
                                 </transformer>
                             </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.googlecode.addjars-maven-plugin</groupId>
+                <artifactId>addjars-maven-plugin</artifactId>
+                <version>1.0.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>add-jars</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}/lib</directory>
+                                </resource>
+                            </resources>
                         </configuration>
                     </execution>
                 </executions>
