--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.15.0-M1</version>
+            <version>2.15.0</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
